fixed overlay gap

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -27,6 +27,10 @@ body {
     text-align: center;
 }
 
+#main-wrapper {
+    margin-top: 0;
+}
+
 #feeds-panel {
     min-height: calc(100vh - 65px);
     background-color: #F6F6F6;
@@ -41,8 +45,7 @@ body {
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     min-width: 100vw;
-    min-height: calc(100vh + 100px);
-    margin-top: -100px;
+    min-height: calc(100vh + 10px);
     z-index: -1000;
 }
 
